2002-04-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	changed description of focus models

2002-03-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	fixed icons being raised right after iconification when done without the
	mouse and via a function

2002-03-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	corrected some typos

2002-03-13  Mikhael Goikhman  <migo@homemail.com>

	* acconfig.h:
	* NEWS:
	fixed an empty statement ";" warning with some compilers

2002-03-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/windowlist.c (CMD_WindowList):
	fixed parsing of conditions versus position of window list broken with
	a recent "fix"

2002-03-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	changed to 2.4.7

	* fvwm/fvwm2.1:
	Corrected the description of the XineramaPrimaryScreen command that was
	essentially lying.

	* NEWS:
	updated for 2.4.6

2002-03-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (pop_menu_up):
	fixed a menu placement bug w/ xinerama

2002-03-07  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/bindings.c (ParseBinding): Handle keysym lengths up to 30.

2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (CMD_ThisWindow):
	* fvwm/commands.h:
	* fvwm/functions.h (enum):
	* fvwm/functions.c (func_config):
	* fvwm/fvwm2.1 (Examples):
	renamed command "This" to "ThisWindow"

	* fvwm/conditional.c (Circulate):
	"Current" no longer selects a random window when no window is focused

2002-03-06  olicha  <olivier.chapuis@free.fr>

	* configure.in:
	* acconfig.h:
	* NEWS:
	* INSTALL.fvwm:
	* fvwm/fvwm.c (main):
	* fvwm/events.c (HandlePropertyNotify):
	* fvwm/add_window.c (free_text_property):
	(get_name_property):
	COMPOUND_TEXT text properties are converted with
	XmbTextPropertyToTextList even if multibyte is disabled. This feature
	can be disbaled with --disable-compound-text.

2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (moveLoop):