@@ -16,6 +16,8 @@ Changes in stable release 2.4.7 (not released yet)
 * Fixed the FvwmAudio compatible mode in FvwmEvent when external
   audio player is used.
 
+* Fixed execution on QNX.
+
 Changes in stable release 2.4.6 (10-Mar-2002)
 
 * Better support of non ISO-8859-1 window and icon titles. See the
