@@ -1,3 +1,9 @@
+2002-04-10  Mikhael Goikhman  <migo@homemail.com>
+
+	* libs/System.c:
+	* NEWS:
+	added #include <sys/select.h> to fix endless loop on QNX
+
 2002-04-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/fvwm2.1:
